large round of bug fixes and unit test improvements.  Almost all UI elements (inputs) checked for correct behaviour via unit tests. Fixed weird error icon layout issue

--- a/css/formdesigner.css
+++ b/css/formdesigner.css
@@ -273,7 +273,8 @@ td {
 
 .fd-tree-valid-alert-icon {
     display:inline;
-    float: right;
+    position:absolute;
+    
 }
 
 .fd-form-props-heading {
